fixed alignment of skills

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -3,7 +3,7 @@
 }
 
 div.jumbotron {
-  background: url(/images/bl_and_white.jpg) no-repeat center center fixed; 
+  background: url(/images/bl_and_white.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -23,7 +23,7 @@ div.jumbotron .container h1 {
   padding: .2em;
 }
 
-div.jumbotron .container h3 { 
+div.jumbotron .container h3 {
   margin-bottom: 10px;
   margin-top: -1px;
 }
@@ -49,8 +49,8 @@ nav i.fa {
   font-size: 1.3em;
 }
 
-div.container-fluid { 
-  background: url(/images/wbg1.png) no-repeat center center fixed; 
+div.container-fluid {
+  background: url(/images/wbg1.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -86,7 +86,7 @@ div.main ul.experience {
 }
 
 div.main ul.skills {
-  margin-left: -2em;
+  margin-left: -4em;
   list-style: none;
 }
 
@@ -95,7 +95,7 @@ div.main ul.skills li {
 }
 
 body {
-  background: url(/images/bl_and_white.jpg) no-repeat center center fixed; 
+  background: url(/images/bl_and_white.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -103,7 +103,7 @@ body {
 }
 
 nav {
-  background: url(/images/wbg1.png) no-repeat center center fixed; 
+  background: url(/images/wbg1.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
